Add domain models and repositories for messaging system
- Introduced ConversationId, MessageId, UserId, and AttachmentId value objects.
- Added ConversationType, MessageType, and MessageStatus enums.
- Created MessageRepository and UserRepository interfaces for data access.
- Implemented Attachment and MessageJpaEntity classes for persistence.
- Updated UserStatus enum with detailed comments.
- Enhanced TypingIndicatorService for managing typing indicators.
- Configured S3 storage settings for AWS SDK integration.

--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- S3/MinIO Client -->
+        <!-- S3 Client - AWS SDK for Supabase S3 -->
         <dependency>
-            <groupId>io.minio</groupId>
-            <artifactId>minio</artifactId>
-            <version>8.5.11</version>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.765</version>
         </dependency>
 
         <!-- Monitoring -->
